--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,13 @@
 			<artifactId>spring-core</artifactId>
 			<version>4.3.13.RELEASE</version>
 		</dependency>
+
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
